add dtos